--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 								<script src="lib/jquery.waypoints.min.js" ></script>
 								<script src="lib/sticky.js" ></script>
 								<script src="lib/pie-chart.js" ></script>
-								<script src="script.js"></script>
+								<script src="script.js"></script><!-- php -->
 								<script src="lib/sweetalert2.min.js"></script>
 							</head>
 						</body>
