--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Портфолио</title>
+		<title>SV QA automation</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="lib/style.css">
@@ -20,7 +20,7 @@
 							<div class="header-text-conctainer clearfix">
 								<div class="header-text-wrap">
 									<div class="header-text-border">
-										<h1 class="header-h1"><span>Zhidkikh Andrew </span></h1>
+										<h1 class="header-h1"><span>Zhydkykh Andrii </span></h1>
 										<p class="header-p"><span class="header-p-span">Front-end developer</span></p>
 									</div>
 								</div>
@@ -28,7 +28,7 @@
 							</div>
 						</div>
 					</header>
-					<div id = "toTop"> <span> ^</span> Наверх </div>
+					<div id = "toTop"> <span> ^</span>Up </div>
 				</div>
 				<nav class="navigation-wrap clearfix ">
 					<div class="container clearfix">
